reduced logo size

--- a/views/pages/partials/navbar.ejs
+++ b/views/pages/partials/navbar.ejs
@@ -13,7 +13,7 @@
     <div class="md:hidden w-full shadow-md border-b border-gray-800">
         <nav class="p-5 flex relative items-center justify-between max-w-[1200px] mx-auto">
             <a href="/">
-                <img src="/public/img/newLogo.png" class="h-10 absolute md:relative top-3" alt="">
+                <img src="/public/img/newLogo.png" class="h-10 max-w-[300px] absolute md:relative top-3" alt="">
             </a>
             <div class="altIcon">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white cursor pointer" viewBox="0 0 20 20" fill="currentColor">
