--- a/views/pages/partials/dashnav.ejs
+++ b/views/pages/partials/dashnav.ejs
@@ -7,7 +7,7 @@
         }
 
     </script>
-    <a href="/"> <img src="/public/img/newLogo.png" class="h-10 max-w-[200px]" alt=""></a>
+    <a href="/"> <img src="/public/img/newLogo.png" class="h-7 md:h-10" alt=""></a>
     <div class="md:hidden menu">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
