--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
 					<h1 class="text-5xl md:text-6xl ultra purples">aira<span class="blue">City</span></h1>
 				</div>
 				<h2 class="mt-4 text-xl text-center md:text-left italic tracking-wide max-w-[360px] md:max-w-[400px] text-gray-200">
-					The city of earning online by simply activating our AI bots( that handles trading sophistication and reduce any sort of risks in the stock market) with your mobile data daily and referring your friends to this awesome platform, you can immediately withdraw NGN 1,000 on every referall
+					The city of earning online by simply activating our AI bots( that handle trading sophistication and reduce any sort of risks in the stock market) with your mobile data daily and referring your friends to this awesome platform, you can immediately withdraw NGN 1,000 on every referral
 				</h2>
 				<a class="startBtn">
 					<button class="dlbtn p-4 rounded-full px-10 font-bold text-lg tracking-wide">
@@ -48,13 +48,11 @@
 			<div class="my-10">
 				<p class="text-lg max-w-[800px] text-center mx-auto">
 					NairaCity is a dual-purpose platform made up of subsidiaries that provide an opportunity to utilize NairaCity
-					AI bots in the background, these bots trades your investment in the stock market and returns profit every day, you will be elligle to withdraw these profits if you have at least NGN 2,000 as your trading proifit, It is one of the leading trading platforms, offering trading
+					AI bots in the background, these bots trade your investment in the stock market and return profit every day, you will be elligle to withdraw these profits if you have at least NGN 2,000 as your trading profit, It is one of the leading trading platforms, offering trading
 					capacities in every range - especially those who have no idea how the stock market or trading works.
+
 					<br> <br>
-					NairaCity Decentralized trading platform based on smart contracts that connects people from all over the world and
-					opens the limitless possibilities of the new economic financial system.
-					<br> <br>
-					Our mission is to make the process of earning passive income easy and fast for everyone, and giving literally anyone the oppurtunity to be an investor in the stock market and earn from trading with 0 risks through the use of Artificial Intelligence Technology (AI), you can immediately withdraw your referall bonus on every new user you bring in, NairaCity offers you the best experience of earning online
+					Our mission is to make the process of earning passive income easy and fast for everyone, and giving literally anyone the oppurtunity to be an investor in the stock market and earn from trading with 0 risks through the use of Artificial Intelligence Technology (AI), you can immediately withdraw your referral bonus on every new user you bring in, NairaCity offers you the best experience of earning online
 				</p>
 			</div>
 		</div>
@@ -112,16 +110,16 @@
 					<h1 class="text-3xl font-bold text-gray-300 text-center md:text-left">Referring</h1>
 					<div class="dlbtn h-[2px] my-5 w-full" ></div>
 					<p class="text-lg md:text-xl font-semibold text-gray-200 text-center md:text-left max-w-[320px] md:max-w-[450px] ">
-						Give your friends the opportunity of becoming a member of this great city, all you have to do is to tell them to register via your referall link which you will find in your dashboard, you can withdraw NGN 1,000 on each referalls
+						Give your friends the opportunity of becoming a member of this great city, all you have to do is to tell them to register via your referral link which you will find in your dashboard, you can withdraw NGN 1,000 on each referrals
 					</p>
 				</div>
-				<img src="/public/img/referall.png" class="h-[400px] max-w-[300px] md:max-w-[500px] mx-5 object-contain" alt="">
+				<img src="/public/img/referral.png" class="h-[400px] max-w-[300px] md:max-w-[500px] mx-5 object-contain" alt="">
 			</div>
 		</div>
 	</section>
 
 	<!-- Packages -->
-	<section class="p-5 flex items-center justify-center p-5 w-screen">
+	<section class="flex items-center justify-center p-5 w-screen">
 		<div class="my-10 mb-40">
 			<div class="flex flex-col items-center justify-center gap-2 mb-12">
 				<h1 class="text-center text-3xl md:text-4xl font-sans tracking-wide font-bold text-violet-200">
