--- a/views/pages/partials/footer.ejs
+++ b/views/pages/partials/footer.ejs
@@ -19,11 +19,11 @@
     <p class="text-gray-500 text-center my-10"> Designed & Developed by NairaCity Technologies Ltd All Rights Reserved</p>
 
     <script>
-        const startBtn = document.querySelector('.startBtn2');
+        const startBtn2 = document.querySelector('.startBtn2');
         if(user){
-            startBtn.href = '/dashboard';
+            startBtn2.href = '/dashboard';
         } else {
-            startBtn.href = '/register';
+            startBtn2.href = '/register';
         }
     </script>
 </footer>
