--- a/views/admin/thisuser.ejs
+++ b/views/admin/thisuser.ejs
@@ -84,17 +84,46 @@
                             </div>
                             <div class="space-y-2">
                               <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Amount Withdwrawn
+                                Referrals Withdwrawn
                               </p>
                               <p class="amountWith border-b outline-none w-full border-gray-400 package"
+                              ></p>
+                            </div>
+                            <div class="space-y-2">
+                              <p class="text-md font-bold text-gray-500 tracking-wider">
+                                Trading Withdwrawn
+                              </p>
+                              <p class="tradedWith border-b outline-none w-full border-gray-400 package"
+                              ></p>
+                            </div>
+                            <div class="space-y-2">
+                              <p class="text-md font-bold text-gray-500 tracking-wider">
+                                Referal Balance
+                              </p>
+                              <p class="refBalance border-b outline-none w-full border-gray-400 package"
+                              ></p>
+                            </div>
+                            <div class="space-y-2">
+                              <p class="text-md font-bold text-gray-500 tracking-wider">
+                                Trading Balance
+                              </p>
+                              <p class="tradeBalance border-b outline-none w-full border-gray-400 package"
                               ></p>
                             </div>
                         </div>
                         <!-- Buttons -->
                         <div class="hidden withDiv">
+                          <h1 class="text-center font-bold text-gray-800 text-lg">Referral Bonus Sent</h1>
                           <form class="withForm w-full flex items-end justify-end flex-col gap-5 mb-10 pr-10">
-                            <input type="number" class="w-full max-w-[300px] p-2 bg-transparent outline-none border-b border-gray-400 pb-2 amountGiven" placeholder="enter amount withdrawn">
+                            <input type="number" class="w-full max-w-[300px] p-2 bg-transparent outline-none border-b border-gray-400 pb-2 amountGiven" placeholder="enter referred amount withdrawn">
                             <button class="approveBtn bg-green-500 p-2 text-white text-lg font-bold rounded-md">Approve Withdrawal</button>
+                          </form>
+                        </div>
+                        <div class="hidden tradedWithDiv">
+                          <h1 class="text-center font-bold text-gray-800 text-lg">Traded Amount Sent</h1>
+                          <form class="tradeForm w-full flex items-end justify-end flex-col gap-5 mb-10 pr-10">
+                            <input type="number" class="w-full max-w-[300px] p-2 bg-transparent outline-none border-b border-gray-400 pb-2 tradeAmountGiven" placeholder="enter traded amount withdrawn">
+                            <button class="withTradeBtn bg-green-500 p-2 text-white text-lg font-bold rounded-md">Approve Withdrawal</button>
                           </form>
                         </div>
                     </div> 
