--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -29,7 +29,10 @@
                                     Phone Number
                                 </th>
                                 <th scope="col" class="px-6 py-3">
-                                    Requested Withd
+                                    req ref
+                                </th>
+                                <th scope="col" class="px-6 py-3">
+                                    req trade
                                 </th>
                                 <th scope="col" class="px-6 py-3">
                                     Verified
