making it better

--- a/views/admin/thisuser.ejs
+++ b/views/admin/thisuser.ejs
@@ -70,13 +70,6 @@
                             </div>
                             <div class="space-y-2">
                               <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Requested Withdrawal
-                              </p>
-                              <p class="border-b outline-none w-full border-gray-400 withdraw"
-                              ></p>
-                            </div>
-                            <div class="space-y-2">
-                              <p class="text-md font-bold text-gray-500 tracking-wider">
                                 Package Type
                               </p>
                               <p class="border-b outline-none w-full border-gray-400 package"
@@ -98,16 +91,16 @@
                             </div>
                             <div class="space-y-2">
                               <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Referal Balance
+                                Requested Referral with
                               </p>
-                              <p class="refBalance border-b outline-none w-full border-gray-400 package"
+                              <p class="border-b outline-none w-full border-gray-400 reqRefWith"
                               ></p>
                             </div>
                             <div class="space-y-2">
                               <p class="text-md font-bold text-gray-500 tracking-wider">
-                                Trading Balance
+                                Requested Traded with
                               </p>
-                              <p class="tradeBalance border-b outline-none w-full border-gray-400 package"
+                              <p class="reqTradeWith border-b outline-none w-full border-gray-400 package"
                               ></p>
                             </div>
                         </div>
