--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -183,7 +183,7 @@
                                         <p class="flex-1 font-semibold text-lg">NairaCity Package: 
                                             <span class="packageType text-yellow-500">
                                                 <script>
-                                                    document.querySelector(".packageType").innerHTML = newUser.package                      
+                                                    document.querySelector(".packageType").innerHTML = newUser.package || "None"              
                                                </script>
                                             </span>
                                         </p>
