changed referal link to new domain

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -491,7 +491,7 @@
                                     <p class="text-sm text-gray-400 rounded-md border border-green-600 p-2 w-full text-center refLink hidden refUsername">
                                         <script>
                                             document.querySelector(".refUsername")
-                                            .innerHTML = "https://nairacity.herokuapp.com/register?ref=" + newUser.username                              
+                                            .innerHTML = "https://www.naircity.com/register?ref=" + newUser.username                              
                                        </script>
                                     </p>
                                     <p class="py-2 px-4 rounded-md bg-pink-600 font-bold cursor-pointer copyBtn hidden">Copy Referall
