--- a/views/pages/partials/navbar.ejs
+++ b/views/pages/partials/navbar.ejs
@@ -9,6 +9,10 @@
             window.location.href = '/dashboard'
         }
 
+        if(window.location.href.includes('https://nairacity.herokuapp.com')){
+            window.location.href = "https://www.naircity.com"
+        }
+
     </script>
     <!-- On Mobile -->
     <div class="md:hidden w-full shadow-md border-b border-gray-800">
