--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -385,6 +385,7 @@
                                                 })
                                                 .catch(function (err) {
                                                 console.log(err)
+                                                window.location.reload()
                                                 })
                                         }
 
