--- a/views/pages/partials/header.ejs
+++ b/views/pages/partials/header.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,6 +11,11 @@
 	<link href="https://fonts.googleapis.com/css2?family=Ultra&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/public/styles/style.css" />
 	<title>NairaCity</title>
+	<!-- META DESCRIPTION -->
+	<meta name="description" content="NairaCity is a trading platform that helps newbies in the stock market earn from investments without knowing how to trade, it offers everyone the opportunity of making money online and easily getting income through referrals" >
+	<!-- META KEYWORDS -->
+	<meta name="keywords" content="Money, platform, Online, Naira, legitimate">
+
 	<style>
 		body{
 			/* background-color: #313131; */
