--- a/views/pages/partials/navbar.ejs
+++ b/views/pages/partials/navbar.ejs
@@ -9,8 +9,16 @@
             window.location.href = '/dashboard'
         }
 
-        if(window.location.href.includes('https://nairacity.herokuapp.com')){
-            window.location.href = "https://www.naircity.com"
+        if (user && (window.location.href.includes('login'))) {
+            window.location.href = '/dashboard'
+        }
+
+        // if(window.location.href.includes('nairacity.herokuapp.com')){
+        //     window.location.href = "https://www.naircity.com"
+        // }
+
+        if(window.location.href.includes('naircity.com')){
+            window.location.href = "/wait"
         }
 
     </script>
