--- a/views/admin/partials/adminnav.ejs
+++ b/views/admin/partials/adminnav.ejs
@@ -1,11 +1,11 @@
 
 <nav class="bg-[#afafaf] border-b shadow border-green-900 p-5 fixed w-full z-50 flex items-center justify-between md:block">
-    <!-- <script>
-        const user = JSON.parse(localStorage.getItem('user'));
-        if(!user){
+    <script>
+        const boss = JSON.parse(localStorage.getItem('admin'));
+        if(!boss){
             window.location.href = '/register';
         }
-    </script> -->
+    </script>
     <a href="/admin"> <img src="/public/img/newLogo.png" class="h-10 " alt=""></a>
     <div class="md:hidden menu">
         <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
