--- a/views/pages/wait.ejs
+++ b/views/pages/wait.ejs
@@ -8,7 +8,7 @@
                 <img src="/public/img/newLogo.png" class="h-10 " alt="">
                 <p>The next big thing</p>
                 <img src="/public/img/timer.gif" class="h-20 " alt="">
-                <h1 class="font-semibold">Launching on Friday, 13th May 2022...</h1>
+                <h1 class="font-semibold">Launching today, 12 PM PROMPT...</h1>
             </div>
         </section>
   
