--- a/views/pages/partials/footer.ejs
+++ b/views/pages/partials/footer.ejs
@@ -1,10 +1,12 @@
+
+
 <footer class="bg-[#1f1f1f] p-5 overlfow-x-hidden">
     <div class="max-w-[1200px] mx-auto flex items-center flex-col md:flex-row gap-5 justify-center md:justify-between my-20">
         <div class="flex flex-col items-center justify-center gap-5">
             <div class="flex items-center justify-center gap-5">
                 <a href="/"><p class="text-lg border-b border-gray-800 text-gray-500">NairaCity</p></a>
-                <a href="https://nairacity.herokuapp.com/#about"><p class="text-lg border-b border-gray-800 text-gray-500">About</p></a>
-                <a href="https://nairacity.herokuapp.com/#howitworks"><p class="text-lg border-b border-gray-800 text-gray-500">How it Works</p></a>
+                <a href="https://www.naircity.com/#about"><p class="text-lg border-b border-gray-800 text-gray-500">About</p></a>
+                <a href="https://www.naircity.com/#howitworks"><p class="text-lg border-b border-gray-800 text-gray-500">How it Works</p></a>
             </div>
             <img src="/public/img/newLogo.png" alt="logo" class="w-28 mx-auto hs-10">
         </div>
