--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -526,6 +526,7 @@
                             <div>
                                 <!-- Table -->
                                 <div class="w-[97%] p-4 rounded-md md:max-w-[1200px] mx-auto shadow-md m-2 space-y-5">
+                                    <h1 class="text-green-500 text-3xl font-bold text-center mt-20">Referral List</h1>
                                     <div class="relative overflow-x-auto shadow-md sm:rounded-lg ">
                                         <table class="w-full text-sm text-left">
                                             <thead class="text-xs text-gray-300 uppercase bg-gray-900">
