--- a/views/pages/withdraw.ejs
+++ b/views/pages/withdraw.ejs
@@ -41,7 +41,7 @@
                         </script>
                         <div class="mt-10 m-5 min-h-screen">
                             <h1 class="ultra text-4xl text-green-500 text-center mt-12">Withdraw Funds</h1>
-                            <p class="text-green-200 text-center mt-2 italic max-w-[800px] mx-auto"><b>NOTICE:</b> You can not withdraw from your trading balance until one month after registration However you can withdraw from your referral even if you have only NGN 1,000 and you should get your referral bonus at least 6 hours after you place withdrawal</p>
+                            <p class="text-green-200 text-center mt-2 italic max-w-[800px] mx-auto"><b>NOTICE:</b> You can not withdraw from your trading balance until one month after registration However you can withdraw from your referral balance even if you have only NGN 1,000 and you should get your referral bonus in the bank account you provided at least 6 hours after you place withdrawal</p>
                             <div class="mb-5">
                                 <div class="flex items-center justify-center flex-col my-10 gap-5">
                                     <div class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 w-full max-w-[800px] mx-auto">
@@ -53,6 +53,7 @@
                                             <div class="purpleGrad w-10 h-10 opacity-50"></div>
                                         </div>
                                         <button class="withdrwBtn greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-lg tracking-wide my-5 w-full mx-auto text-center max-w-[600px] mt-10 cursor-pointer animate-pulse hidden"></button>
+                                        <p class="pendingBtn bg-gray-900 p-4 rounded-md px-10 font-bold text-sm tracking-wide my-5 w-full mx-auto text-center max-w-[600px] mt-10 cursor-pointer animate-pulse hidden">PENDING...</p>
                                         <p class="referrBtn greenBtn shadow-md shadow-green-700 p-4 rounded-md px-10 font-bold text-sm tracking-wide my-5 w-full mx-auto text-center max-w-[600px] mt-10 cursor-pointer animate-pulse hidden">Start Referring your friends and earn #1,000 on each referral</p>
                                     </div>
                                     <div class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 w-full max-w-[800px] mx-auto">
@@ -156,8 +157,11 @@
                 }
 
                 if(user.withdraw){
-                    withdrwBtn.innerHTML = "PENDING...";
+                    withdrwBtn.classList.add("hidden")
                     withdrwBtn.disabled = true;
+                    document.querySelector('.pendingBtn').classList.remove('hidden');
+                    // withdrawBtn.classList.remove('greenBtn');
+                    withdrawBtn.classList.add('bg-yellow-500');
                 } else {
                     withdrwBtn.innerHTML = "Place withdrawal"
 
